--- a/Kotlin/build.gradle
+++ b/Kotlin/build.gradle
@@ -12,3 +12,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
 }
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
